[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/potato.png" type="Texture" id=1]
[ext_resource path="res://Art/Themes/1.tres" type="Theme" id=2]
[ext_resource path="res://Text.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]
[ext_resource path="res://Sounds/03 Before the Dawn.ogg" type="AudioStream" id=5]
[ext_resource path="res://Art/Controls_shoot.png" type="Texture" id=6]
[ext_resource path="res://Art/scroll.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.243137 )

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )
option_path = NodePath("Control/Guns")

[node name="Zom smasher" type="AnimatedSprite" parent="."]
position = Vector2( 534, 74 )
scale = Vector2( 8, 8 )
frames = SubResource( 3 )
animation = "idle"
frame = 1
playing = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" parent="Control" instance=ExtResource( 3 )]
margin_left = 60.0
margin_top = 14.0
margin_right = 320.0
margin_bottom = 47.0
text = "Your zom Smasher"

[node name="Button" type="Button" parent="Control"]
margin_left = 454.0
margin_top = 250.0
margin_right = 599.0
margin_bottom = 313.0
theme = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Guns" type="Button" parent="Control"]
margin_left = 41.0
margin_top = 250.0
margin_right = 186.0
margin_bottom = 313.0
text = "Seven Seven"
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_left = -1.0
margin_top = -3.0
margin_right = 639.0
margin_bottom = 351.0
color = Color( 0, 0, 0, 0.176471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/ColorRect"]
margin_left = 382.0
margin_top = 17.0
margin_right = 628.0
margin_bottom = 341.0
texture = ExtResource( 7 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Control/ColorRect/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -127.0
margin_right = 84.0
margin_bottom = 127.0
mouse_filter = 1
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect/TextureRect/ScrollContainer"]
margin_right = 173.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Back" type="Button" parent="Control/ColorRect/TextureRect/ScrollContainer/VBoxContainer"]
margin_right = 173.0
margin_bottom = 33.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Back"

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Guns" to="." method="_on_Guns_pressed"]
[connection signal="pressed" from="Control/ColorRect/TextureRect/ScrollContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
